fixed overflow problem

--- a/src/scss/pages/_adopt.scss
+++ b/src/scss/pages/_adopt.scss
@@ -5,6 +5,10 @@
 		@include wrapper(1200, 30);
 		display: flex;
 		flex-direction: column;
+
+		@include breakpoint-max(600) {
+			padding: 0;
+		}
 	}
 
 	&__header {
@@ -43,7 +47,6 @@
 		align-items: baseline;
 		justify-content: space-between;
 		position: relative;
-		overflow: hidden;
 
 		@include breakpoint-max(600) {
 			flex-wrap: wrap;
@@ -56,6 +59,7 @@
 		position: sticky;
 		top: 80px;
 		z-index: 500;
+
 		@include breakpoint-max(600) {
 			margin-right: 0;
 			width: 100%;
@@ -99,10 +103,13 @@
 	}
 
 	&__pages {
-		max-width: 765px;
+		max-width: 865px;
+		overflow-y: hidden;
 	}
 
 	.page {
+		padding: 30px;
+
 		&__title {
 			font-weight: 900;
 			margin-bottom: 15px;
@@ -171,7 +178,7 @@
 
 			&:hover {
 				transform-origin: bottom;
-				transform: scale(1.08);
+				transform: scale(1.04);
 				box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.6);
 			}
 
